Made the page responsive and added a button to change grid size.

--- a/style.css
+++ b/style.css
@@ -4,12 +4,60 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: black;
+}
+
+#header {
+  display: flex;
+  align-items: center;
+  color: white;
+  flex-direction: column;
+  width: 100%;
+  padding-bottom: 25px;
+}
+
 #grid-container {
   margin: auto;
   width: 512px;
   height: 512px;
 }
 
+#optional-buttons {
+  padding-top: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#change-grid {
+  width: 20%;
+  font-size: 20px;
+}
+
 .grid {
-  border: 1px solid black;
+  border: 1px solid white;
+  color: white;
+}
+
+@media (min-width: 1920){
+  #grid-container {
+    width: 1000px;
+    height: 1000px;
+  }
+  #change-grid {
+    width: 10%;
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 512px){
+ #grid-container {
+   width: 300px;
+   height: 300px;
+ } 
+ 
+ #change-grid {
+   font-size: 10px;
+ }
 }
